--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,10 +10,11 @@ eureka.client.service-url.default-zone=http://${eureka.instance.hostname}:8761/e
 #zuul.ribbon.eager-load.enabled=true
 #zuul.ignored-services=*
 
-zuul.routes.employee-service.path=/employee/**
+zuul.routes.employee-service.path=/employee/*
 zuul.routes.employee-service.url=http://localhost:8080
 zuul.routes.employee-service.serviceId=employee-service
 zuul.routes.employee-service.stripPrefix=false
+zuul.routes.employee-service.sensitive-headers=Cookie,Set-Cookie
 
 zuul.routes.login-service.path=/user/**
 zuul.routes.login-service.url=http://localhost:8081
