--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.initialization-mode=always
 spring.application.name=employee-service
 server.port=8080
 
+zuul.gateway=192.168.59.100:32000
 eureka.instance.hostname=${vcap.aplication.uris[0]:localhost}
 eureka.instance.prefer-ip-address=true
 eureka.instance.lease-renewal-interval-in-seconds=10
