--- a/fsccKubernetes/logindb/login-db-deployment.yaml
+++ b/fsccKubernetes/logindb/login-db-deployment.yaml
@@ -18,6 +18,9 @@ spec:
         name: mysql
         ports:
           - containerPort: 3306
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            value: password
         volumeMounts:
           - name: mysql-persistent-storage
             mountPath: /var/lib/mysql
