--- a/fsccKubernetes/login-service/login-service.yaml
+++ b/fsccKubernetes/login-service/login-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1           # API version
+apiVersion: apps/v1           # includes functionality related to running applications on Kubernetes, like Deployments, RollingUpdates, and ReplicaSets.
 kind: Deployment              # Type of kubernetes resource
 metadata:
   name: login-service    # Name of the kubernetes resource
@@ -7,7 +7,7 @@ metadata:
 spec:
   replicas: 1                 # No. of replicas/pods to run in this deployment
   selector:
-    matchLabels:              # The deployment applies to any pods mayching the specified labels
+    matchLabels:              # The deployment applies to any pods matching the specified labels
       app: login-service
   template:                   # Template for creating the pods in this deployment
     metadata:
